--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       color: white;
       background-color: #000;
       overflow-x: hidden;
-      visibility: hidden; /* Evita flash de conteúdo */
     }
 
     header {
@@ -52,6 +51,8 @@
       align-items: center;
       gap: 1rem;
       position: relative;
+      margin: 0;
+      padding: 0;
     }
 
     .content {
@@ -107,12 +108,19 @@
       font-size: 1.2rem;
     }
 
+    .profile-container {
+      position: relative;
+    }
+
     .profile-icon {
       width: 32px;
       height: 32px;
       border-radius: 50%;
       background-color: white;
       cursor: pointer;
+      margin: 0;
+      padding: 0;
+      display: block;
       background-size: cover;
       background-position: center;
     }
@@ -120,28 +128,26 @@
     .profile-menu {
       display: none;
       position: absolute;
-      top: 40px;
       right: 0;
-      background-color: #222;
-      border-radius: 8px;
-      padding: 0.5rem;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
+      top: 40px;
+      background-color: #111;
+      border-radius: 6px;
+      overflow: hidden;
       z-index: 20;
     }
 
-    .profile-menu button {
-      display: block;
-      width: 100%;
-      background: none;
-      border: none;
-      color: white;
-      padding: 0.5rem;
-      text-align: left;
+    .profile-menu div {
+      padding: 0.4rem 1rem;
       cursor: pointer;
+      white-space: nowrap;
     }
 
-    .profile-menu button:hover {
-      background-color: #333;
+    .profile-menu div:hover {
+      background-color: #222;
+    }
+
+    .profile-menu .logout {
+      color: red;
     }
 
     #password-container {
@@ -222,11 +228,11 @@
         </div>
         <div class="search-toggle" id="search-icon" onclick="toggleSearch()">🍿</div>
       </div>
-      <div style="position: relative;">
+      <div class="profile-container">
         <div class="profile-icon" onclick="toggleProfileMenu()"></div>
         <div class="profile-menu" id="profile-menu">
-          <button onclick="escolherFoto()">Avatar</button>
-          <button onclick="logout()">Sair</button>
+          <div onclick="escolherFoto()">avatar</div>
+          <div class="logout" onclick="logout()">logout</div>
         </div>
       </div>
     </div>
@@ -256,70 +262,26 @@
   </div>
 
   <script>
-    window.onload = function () {
-      if (localStorage.getItem("logado") === "true") {
-        document.getElementById("password-container").style.display = "none";
-        document.getElementById("site-content").style.display = "flex";
-        document.getElementById("icon-bar").style.display = "flex";
-        document.getElementById("home-btn").style.display = "block";
-        carregarFoto();
-      }
-      document.body.style.visibility = "visible";
-    };
-
     function verificarSenha() {
       const senha = document.getElementById("senha").value;
       if (senha === "123") {
         localStorage.setItem("logado", "true");
-        document.getElementById("password-container").style.display = "none";
-        document.getElementById("site-content").style.display = "flex";
-        document.getElementById("icon-bar").style.display = "flex";
-        document.getElementById("home-btn").style.display = "block";
+        mostrarSite();
         carregarFoto();
       } else {
         alert("Senha incorreta!");
       }
     }
 
+    function mostrarSite() {
+      document.getElementById("password-container").style.display = "none";
+      document.getElementById("site-content").style.display = "flex";
+      document.getElementById("icon-bar").style.display = "flex";
+      document.getElementById("home-btn").style.display = "block";
+    }
+
     function voltarHome() {
       window.scrollTo({ top: 0, behavior: "smooth" });
-    }
-
-    function toggleCategorias() {
-      const categorias = document.getElementById("categorias");
-      categorias.style.display = categorias.style.display === "block" ? "none" : "block";
-    }
-
-    function toggleSearch() {
-      const box = document.getElementById("search-box");
-      const icon = document.getElementById("search-icon");
-      if (box.style.display === "flex") {
-        box.style.display = "none";
-        icon.style.display = "block";
-        document.getElementById("search-input").value = "";
-      } else {
-        box.style.display = "flex";
-        icon.style.display = "none";
-        document.getElementById("search-input").focus();
-      }
-    }
-
-    function handleSearchKey(event) {
-      if (event.key === "Enter") {
-        submitSearch();
-      }
-    }
-
-    function submitSearch() {
-      const query = document.getElementById("search-input").value.trim();
-      if (query) {
-        alert(`Você pesquisou por: ${query}`);
-      }
-      toggleSearch();
-    }
-
-    function filtrarCategoria(categoria) {
-      alert(`Você escolheu a categoria: ${categoria}`);
     }
 
     function escolherFoto() {
@@ -351,6 +313,44 @@
       }
     }
 
+    function toggleCategorias() {
+      const categorias = document.getElementById("categorias");
+      categorias.style.display = categorias.style.display === "block" ? "none" : "block";
+    }
+
+    function toggleSearch() {
+      const box = document.getElementById("search-box");
+      const icon = document.getElementById("search-icon");
+
+      if (box.style.display === "flex") {
+        box.style.display = "none";
+        icon.style.display = "block";
+        document.getElementById("search-input").value = "";
+      } else {
+        box.style.display = "flex";
+        icon.style.display = "none";
+        document.getElementById("search-input").focus();
+      }
+    }
+
+    function handleSearchKey(event) {
+      if (event.key === "Enter") {
+        submitSearch();
+      }
+    }
+
+    function submitSearch() {
+      const query = document.getElementById("search-input").value.trim();
+      if (query) {
+        alert(`Você pesquisou por: ${query}`);
+      }
+      toggleSearch();
+    }
+
+    function filtrarCategoria(categoria) {
+      alert(`Você escolheu a categoria: ${categoria}`);
+    }
+
     function toggleProfileMenu() {
       const menu = document.getElementById("profile-menu");
       menu.style.display = menu.style.display === "block" ? "none" : "block";
@@ -361,13 +361,20 @@
       location.reload();
     }
 
-    window.onclick = function (event) {
-      const profileMenu = document.getElementById("profile-menu");
-      const profileIcon = document.querySelector(".profile-icon");
-      if (!profileMenu.contains(event.target) && !profileIcon.contains(event.target)) {
-        profileMenu.style.display = "none";
+    window.onload = () => {
+      if (localStorage.getItem("logado") === "true") {
+        mostrarSite();
+        carregarFoto();
       }
     };
+
+    document.addEventListener("click", function (e) {
+      const profileMenu = document.getElementById("profile-menu");
+      const profileIcon = document.querySelector(".profile-icon");
+      if (!profileMenu.contains(e.target) && !profileIcon.contains(e.target)) {
+        profileMenu.style.display = "none";
+      }
+    });
   </script>
 </body>
 </html>
