--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Patounic</title>
+  <link rel="icon" type="image/webp" href="https://media.discordapp.net/attachments/1381522672558669843/1392046188693553262/1333894209119453256.webp?ex=686e1b8a&is=686cca0a&hm=2d1ad98fa56306479b98ad7fc457079cb7cdfda0bc4316fc9c83fac2d52ed5d1&=&format=webp&width=86&height=86">
   <style>
     * {
       margin: 0;
@@ -216,7 +217,6 @@
 </head>
 <body>
   <script>
-    // Evita piscar a tela de senha ao carregar a página
     window.onload = () => {
       const logado = localStorage.getItem("logado");
       if (logado === "true") {
